# UANC

./: .gitignore  CMakeLists.txt  Readme.txt  runCmakeWithClang.bash
Code/Tests/: PerformanceMeasureTest.cc
Code/UANC/: CMakeLists.txt  main.cpp
Code/UANC/algorithm/: Algorithm.cpp  Algorithm.h  InverseDirectAlgorithm.h  InverseFFTAlgorithm.h  PerformanceMeasure.h  PerformanceMeasureNode.h
Code/UANC/amv/: Algorithm.h  AlgorithmRegister.h  AlgorithmThread.h  AlgorithmView.h  IAlgorithm.h  IAlgorithmView.h  InvertedModel.h  PerformanceMeasurementRegister.cpp  PerformanceMeasurementRegister.h  SignalModel.h
Code/UANC/gui/: Control.cpp  Control.h  GlobalSettingsBar.h  HeatWidget.cpp  HeatWidget.h  ImportWindow.cpp  ImportWindow.h  MainWidget.cpp  MainWidget.h  MainWindow.cpp  MainWindow.h  PMWidget.cpp  PMWidget.h  PerformanceTree.cpp  PerformanceTree.h  PlotWidget.cpp  PlotWidget.h  SignalPlot.cpp  SignalPlot.h  SignalViewWidget.h
Code/UANC/util/: DialogUtil.h  DummyActor.h  FileActor.h  GlobalSettings.h  PerformanceMeasure.h  PerformanceMeasureNode.h  SignalFileActor.h  SignalManager.cc  SignalManager.cpp  SignalManager.h
Code/libs/aquila/: filter.h  ml.h  source.h  synth.h  tools.h  transform.h
Code/libs/aquila-build/: CMakeCache.txt  CTestTestfile.cmake  Doxyfile  Makefile  cmake_install.cmake  install_manifest.txt  uninstall.cmake
Code/libs/qplot/: qcustomplot.cpp  qcustomplot.h
Docs/: Doxyfile  Doxyfile.in
Docs/html/: _a_n_c_algorithm_8h.html  _a_n_c_algorithm_8h_source.html  _a_n_c_algorithm_register_8h.html  _a_n_c_algorithm_register_8h_source.html  _a_n_c_model_8h.html  _a_n_c_model_8h_source.html  _a_n_c_view_8cpp.html  _a_n_c_view_8h.html  _a_n_c_view_8h_source.html  _algorithm_8h.html  _algorithm_8h_source.html  _algorithm_thread_8h.html  _algorithm_thread_8h_source.html  _algorithm_view_8h.html  _algorithm_view_8h_source.html  _control_8cpp.html  _control_8h.html  _control_8h_source.html  _dialog_util_8h.html  _dialog_util_8h_source.html  _dummy_actor_8h.html  _dummy_actor_8h_source.html  _epsilon_tests_8cpp.html  _epsilon_tests_8h.html  _epsilon_tests_8h_source.html  _event_container_8h.html  _event_container_8h_source.html  _event_manager_8cpp.html  _event_manager_8h.html  _event_manager_8h.js  _event_manager_8h_source.html  _event_observer_8cpp.html  _event_observer_8h.html  _event_observer_8h_source.html  _event_token_8cpp.html  _event_token_8h.html  _event_token_8h_source.html  _events_8h.html  _events_8h.js  _events_8h_source.html  (+326 more)
Docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_2.js  files_3.js  (+42 more)
Docs/latex/: _a_n_c_algorithm_8h.tex  _a_n_c_algorithm_register_8h.tex  _a_n_c_model_8h.tex  _a_n_c_view_8cpp.tex  _a_n_c_view_8h.tex  _algorithm_8h.tex  _algorithm_thread_8h.tex  _algorithm_view_8h.tex  _control_8cpp.tex  _control_8h.tex  _dialog_util_8h.tex  _dummy_actor_8h.tex  _epsilon_tests_8cpp.tex  _epsilon_tests_8h.tex  _event_container_8h.tex  _event_manager_8cpp.tex  _event_manager_8h.tex  _event_observer_8cpp.tex  _event_observer_8h.tex  _event_token_8cpp.tex  _event_token_8h.tex  _events_8h.tex  _f_f_t_model_8h.tex  _f_f_t_transformation_algorithm_8h.tex  _f_f_t_view_8cpp.tex  _f_f_t_view_8h.tex  _file_actor_8h.tex  _global_settings_8h.tex  _global_settings_bar_8h.tex  _heat_view_8h.tex  _heat_widget_8cpp.tex  _heat_widget_8h.tex  _i_algorithm_8h.tex  _i_algorithm_view_8h.tex  _identity_transformation_algorithm_8h.tex  _import_window_8cpp.tex  _import_window_8h.tex  _inverse_direct_algorithm_8h.tex  _inverse_f_f_t_algorithm_8h.tex  _inverted_model_8h.tex  (+157 more)
Docs/man/man3/: ANCAlgorithm.h.3  ANCAlgorithmRegister.h.3  ANCModel.h.3  ANCView.cpp.3  ANCView.h.3  Algorithm.h.3  AlgorithmThread.h.3  AlgorithmView.h.3  Control.cpp.3  Control.h.3  DialogUtil.h.3  DummyActor.h.3  EpsilonTests.3  EpsilonTests.cpp.3  EpsilonTests.h.3  EventContainer.h.3  EventIDEqual.3  EventIDHash.3  EventManager.cpp.3  EventManager.h.3  EventObserver.cpp.3  EventObserver.h.3  EventToken.cpp.3  EventToken.h.3  Events.h.3  FFTModel.h.3  FFTTransformationAlgorithm.h.3  FFTView.cpp.3  FFTView.h.3  FileActor.h.3  GlobalSettings.h.3  GlobalSettingsBar.h.3  HeatView.h.3  HeatWidget.cpp.3  HeatWidget.h.3  IAlgorithm.h.3  IAlgorithmView.h.3  IdentityTransformationAlgorithm.h.3  ImportWindow.cpp.3  ImportWindow.h.3  (+115 more)
Docs/required_software/: required_software.tex
docs/required_software/: required_software.aux
libraries/aquila-build/: CMakeCache.txt  CTestTestfile.cmake  Doxyfile  Makefile  cmake_install.cmake  install_manifest.txt  uninstall.cmake
libraries/aquila-build/examples/: Makefile  cmake_install.cmake
libraries/aquila-build/lib/: Makefile  cmake_install.cmake
libraries/aquila-build/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  constants.h
libraries/qt5/lib/: libQt53DCore.la  libQt53DCore.prl  libQt53DExtras.la  libQt53DExtras.prl  libQt53DInput.la  libQt53DInput.prl  libQt53DLogic.la  libQt53DLogic.prl  libQt53DQuick.la  libQt53DQuick.prl  libQt53DQuickExtras.la  libQt53DQuickExtras.prl  libQt53DQuickInput.la  libQt53DQuickInput.prl  libQt53DQuickRender.la  libQt53DQuickRender.prl  libQt53DRender.la  libQt53DRender.prl  libQt5Bluetooth.la  libQt5Bluetooth.prl  libQt5Bootstrap.la  libQt5CLucene.la  libQt5CLucene.prl  libQt5Concurrent.la  libQt5Core.la  (+88 more)
software/doxygen-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
src/data_publisher/: DataController.cc  DataController.h  data_controller.cc  data_controller.h
uml/: Architecture.zargo  Architecture.zargo~  DataPublishingSystem.zargo  DataPublishingSystem.zargo~
(+288 files in other folders)
